Bug 490097 - Context menu of hanging app stays on top of all windows
Summary: Context menu of hanging app stays on top of all windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (show other bugs)
Version: 6.1.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-11 10:57 UTC by postix
Modified: 2024-07-19 20:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Screenshot (415.42 KB, image/png)
2024-07-11 10:57 UTC, postix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2024-07-11 10:57:39 UTC
Created attachment 171566 [details]
Screenshot

SUMMARY

I've noticed now a second time, that if you have a (context) menu or dialog of an app is opened, which starts to freeze, that this context menu will stay on top of all other windows until the GUI thread of the app reacts again or the app is terminated.

I've experienced this with Czkawka (written in Rust / Fluent on openSUSE TW) and with Thunderbird 115 (on Fedora 40) on Plasma 6.1.1 Wayland.

[1] https://github.com/qarmin/czkawka


STEPS TO REPRODUCE
1. Open an app like Thunderbird
2. Right click to open a context menu of the app
3. Make the app somehow freeze
4. Bring some app eg Firefox 127 to the front

OBSERVED RESULT
The context menu hovers over the Firefox

EXPECTED RESULT
The context menu is hidden behind Firefox


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.1
KDE Frameworks Version: 6.3.0
Qt Version: 6.7.2
Kernel Version: 6.9.7-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2024-07-19 08:00:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/6142
Comment 2 Zamundaaa 2024-07-19 20:58:39 UTC
Git commit ac80307ebaa114a4db34207ebe31ccf9d7dc3a0c by Xaver Hugl, on behalf of Vlad Zahorodnii.
Committed on 19/07/2024 at 20:49.
Pushed by zamundaaa into branch 'master'.

wayland: Make XdgPopupWindow also destroy Window

Arguably, the compositor doesn't need to wait any longer after dismissing
the popup because it knows that the popup has been closed.

M  +1    -0    src/xdgshellwindow.cpp

https://invent.kde.org/plasma/kwin/-/commit/ac80307ebaa114a4db34207ebe31ccf9d7dc3a0c