wayland: Make XdgPopupWindow also destroy Window

Arguably, the compositor doesn't need to wait any longer after dismissing
the popup because it knows that the popup has been closed.

BUG: 490097